imported all the sass file for render

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,3 +4,5 @@
 @import "layouts/main";
 @import "layouts/footer";
 @import "abstract/mixins";
+@import "layouts/result";
+@import "abstract/animation";
