--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -44,6 +44,14 @@ footer
                 {
                     margin-right : $footer-margin-right;
                 }
+                .format-footer
+                {
+                    transition : all 0.33s;
+                    &:hover
+                    {
+                        transform:scale(1.3,1.3);
+                    }
+                }
             }
         }
     }
