--- a/style.css
+++ b/style.css
@@ -119,13 +119,13 @@ footer {
   border-radius: 2rem;
   font-family: 'Prompt', sans-serif;
   text-align: center;
-  letter-spacing: 2px;
   animation-name: fade;
   animation-duration: 2s;
   min-width: 80rem; }
   .main .result-outer .town {
     font-weight: 600;
-    font-size: 8rem; }
+    font-size: 8rem;
+    letter-spacing: 10px; }
   .main .result-outer .country__region {
     width: 100%; }
     .main .result-outer .country__region .col-1-of-2 {
