--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ header {
 
 .main {
   background-color: #251e3e;
-  height: 65vh;
-  position: relative; }
+  position: relative;
+  height: 90vh; }
   .main .main-outer {
     left: 50%;
     transform: translateX(-50%);
@@ -109,33 +109,33 @@ footer {
           footer .footer-outer .row-of-links .col-individual .format-footer:hover {
             transform: scale(1.3, 1.3); }
 
-.main .result-outer {
+.main .container .result-outer {
   margin-top: 5rem;
   font-size: 3rem;
   background-color: #001830;
   max-width: 114rem;
   border: solid 2px wheat;
-  padding: 1rem 3rem;
+  padding: 3rem 3rem;
   border-radius: 2rem;
   font-family: 'Prompt', sans-serif;
   text-align: center;
   animation-name: fade;
   animation-duration: 2s;
   min-width: 80rem; }
-  .main .result-outer .town {
+  .main .container .result-outer .town {
     font-weight: 600;
     font-size: 8rem;
     letter-spacing: 10px; }
-  .main .result-outer .country__region {
+  .main .container .result-outer .country__region {
     width: 100%; }
-    .main .result-outer .country__region .col-1-of-2 {
+    .main .container .result-outer .country__region .col-1-of-2 {
       width: 50%;
       float: left; }
-  .main .result-outer .condition {
+  .main .container .result-outer .condition {
     clear: both;
     content: "";
     font-weight: bolder; }
-  .main .result-outer .country-img .country-flag {
+  .main .container .result-outer .country-img .country-flag {
     width: 30rem; }
 
 @keyframes fade {
