--- a/style.css
+++ b/style.css
@@ -29,12 +29,11 @@ header {
 
 .main {
   background-color: #251e3e;
-  position: relative;
-  height: 90vh; }
+  position: relative; }
   .main .main-outer {
+    position: absolute;
     left: 50%;
-    transform: translateX(-50%);
-    position: absolute; }
+    transform: translate(-50%); }
     .main .main-outer .search-here {
       float: left; }
       .main .main-outer .search-here .input-here #search_field {
@@ -68,10 +67,7 @@ header {
   .main .result-outer {
     color: wheat;
     font-size: 2rem;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%); }
+    margin-top: 20rem; }
 
 footer {
   font-size: 2.5rem;
@@ -109,34 +105,38 @@ footer {
           footer .footer-outer .row-of-links .col-individual .format-footer:hover {
             transform: scale(1.3, 1.3); }
 
-.main .container .result-outer {
-  margin-top: 5rem;
-  font-size: 3rem;
-  background-color: #001830;
-  max-width: 114rem;
-  border: solid 2px wheat;
-  padding: 3rem 3rem;
-  border-radius: 2rem;
-  font-family: 'Prompt', sans-serif;
-  text-align: center;
-  animation-name: fade;
-  animation-duration: 2s;
-  min-width: 80rem; }
-  .main .container .result-outer .town {
-    font-weight: 600;
-    font-size: 8rem;
-    letter-spacing: 10px; }
-  .main .container .result-outer .country__region {
-    width: 100%; }
-    .main .container .result-outer .country__region .col-1-of-2 {
-      width: 50%;
-      float: left; }
-  .main .container .result-outer .condition {
-    clear: both;
-    content: "";
-    font-weight: bolder; }
-  .main .container .result-outer .country-img .country-flag {
-    width: 30rem; }
+.main .container {
+  padding-top: 15rem;
+  padding-bottom: 12rem; }
+  .main .container .result-outer {
+    margin-top: 5rem;
+    font-size: 3rem;
+    background-color: #001830;
+    max-width: 114rem;
+    border: solid 2px wheat;
+    padding: 3rem 3rem;
+    border-radius: 2rem;
+    font-family: 'Prompt', sans-serif;
+    text-align: center;
+    animation-name: fade;
+    animation-duration: 2s;
+    min-width: 80rem;
+    margin: 0 auto; }
+    .main .container .result-outer .town {
+      font-weight: 600;
+      font-size: 8rem;
+      letter-spacing: 10px; }
+    .main .container .result-outer .country__region {
+      width: 100%; }
+      .main .container .result-outer .country__region .col-1-of-2 {
+        width: 50%;
+        float: left; }
+    .main .container .result-outer .condition {
+      clear: both;
+      content: "";
+      font-weight: bolder; }
+    .main .container .result-outer .country-img .country-flag {
+      width: 30rem; }
 
 @keyframes fade {
   0% {
